Name:		devadmin
Version:	0.3.5.3
Synopsis:       The devadmin package 
Description: 	
  .
  Full Orchestration of development environment. This package provides 
  executables ('build', 'html', 'devconfig'). 
  .
  'build' has several options: 'install', 'installseg', 'push', 'haddock', 'depshow', 
  'directdepshow', 'pull', 'hoogle', 'whatsnew', 'bootstrap', 'haddockboot' and 
  'bridge'. You can use as 
  . 
  > build install pkgname
  .  

License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     template/*.html.st


Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, filepath > 1, unix > 2, directory, process, Cabal, containers, fgl, time, HStringTemplateHelpersIW, HStringTemplate, parsec > 3, configparser, cmdargs, HEPUtil>0.1.2
  Other-Modules:   
                   Paths_devadmin 
  exposed-modules: Application.DevAdmin.Cabal, 
                   Application.DevAdmin.Config, 
                   Application.DevAdmin.Graph, 
                   Application.DevAdmin.Job, 
                   Application.DevAdmin.Project, 
                   Application.DevAdmin.StatusControl, 
                   Application.DevAdmin.VersionCheck, 
                   Application.DevAdmin.ProgType, 
                   Application.DevAdmin.Command, 
                   Application.DevAdmin.Lookup.ProgType, 
                   Application.DevAdmin.Lookup.Command

Executable build 
  Main-is: build.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, filepath>1, devadmin >= 0.2.999,
                 parsec > 3, cmdargs
		 
Executable html 
  Main-is: html.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, filepath > 1, unix > 2, directory, process, 
                 Cabal, containers, fgl, time,
                 parsec > 3, devadmin >= 0.2.999
		 
Executable devconfig 
  Main-is: devconfig.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, cmdargs, devadmin >= 0.2.999

Executable lookup
  Main-is: lookup.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, filepath>1, devadmin >= 0.2.999,
                 parsec > 3, cmdargs
		 


