Name:		devadmin
Version:	0.4.999
Synopsis:       The devadmin package 
Description: 	
  .
  Full Orchestration of development environment. This package provides 
  executables ('build', 'html', 'devconfig', 'lookup', 'refactor', 'showall', 'header'). 
  .
  'build' has several options: 'install', 'installseg', 'push', 'haddock', 'depshow', 
  'directdepshow', 'pull', 'hoogle', 'whatsnew', 'bootstrap', 'haddockboot' and 
  'bridge'. You can use as 
  . 
  > build install pkgname
  .  

License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:      
                template/*.html.st
                template/*.hs.st

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, filepath > 1, unix > 2, directory, process, 
                 Cabal, containers, fgl, time, 
                 HStringTemplateHelpersIW, 
                 HStringTemplate, 
                 parsec > 3 && < 4, 
                 configurator == 0.2.*, 
                 cmdargs == 0.9.*,
                 split == 0.1.*, 
                 strict == 0.3.*, 
                 text == 0.11.*
  Other-Modules:   
                   Paths_devadmin 
  exposed-modules: Application.DevAdmin.Cabal 
                   Application.DevAdmin.Config 
                   Application.DevAdmin.Graph 
                   Application.DevAdmin.Job
                   Application.DevAdmin.Project
                   Application.DevAdmin.StatusControl 
                   Application.DevAdmin.VersionCheck 
                   Application.DevAdmin.ProgType
                   Application.DevAdmin.Command
                   Application.DevAdmin.Lookup.ProgType 
                   Application.DevAdmin.Lookup.Command
                   Application.DevAdmin.Refactor.ProgType
                   Application.DevAdmin.Refactor.Command
                   Application.DevAdmin.Refactor.Job
                   Application.DevAdmin.Refactor.Parse.Import 
                   Application.DevAdmin.Header.ProgType
                   Application.DevAdmin.Header.Command
                   Application.DevAdmin.Header.Job

Executable build 
  Main-is: build.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, filepath>1, 
                 devadmin, configurator, text,
                 cmdargs == 0.9.*
		 
Executable html 
  Main-is: html.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, filepath > 1, devadmin 

		 
Executable devconfig 
  Main-is: devconfig.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, mtl>2, cmdargs == 0.9.*, devadmin

Executable lookup
  Main-is: lookup.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, filepath>1, devadmin,
                 cmdargs == 0.9.*

Executable refactor
  Main-is: refactor.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, filepath>1, devadmin,
                 cmdargs==0.9.*
		 
-- Executable showall
--   Main-is: showall.hs
--   hs-source-dirs: exe
--  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
--  ghc-prof-options: -caf-all -auto-all
--  Build-Depends: base>4, 
--                 filepath>1, 
--                 directory,
--                 process, 
--                 time,
--                 old-locale,
--                 devadmin
--                 -- , 
--                 -- HROOT
                 
Executable header
  Main-is: header.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: base>4, filepath>1, devadmin,
                 cmdargs==0.9.*


